# DAFD

./: DAFD_CMD.py  DAFD_GUI.py  pyproject.toml  pyproject.toml.old  requirements.txt  setup.py
core_logic/: ForwardModel.py  RegimeClassifier.py
dafd/: __init__.py
dafd/core_logic/: ForwardModel.py  InterModel.py  RegimeClassifier.py  Regressor.py
dafd/models/forward_models/: NeuralNetModel_rate1.py  NeuralNetModel_rate2.py  NeuralNetModel_size1.py  NeuralNetModel_size2.py
dafd/models/regime_models/: NeuralNetModel_regime.py
dafd/tolerance_study/: TolHelper.py  plot_utils.py
models/forward_models/: NeuralNetModel_rate1.py  NeuralNetModel_rate2.py  NeuralNetModel_size1.py  NeuralNetModel_size2.py
models/regime_models/: NeuralNetModel_regime.py
